[gd_scene load_steps=24 format=3 uid="uid://darbo0x41j3wt"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_wppqu"]
[ext_resource type="Script" uid="uid://da7s6m61slqga" path="res://panels/UIVirtualFixtures/UIVirtualFixtures.gd" id="2_rd2ea"]
[ext_resource type="Script" uid="uid://y4hb6kdxsou5" path="res://panels/UIVirtualFixtures/FixtureContainer.gd" id="3_4kdmq"]
[ext_resource type="Shader" uid="uid://g52t8ljy2oxx" path="res://assets/shaders/Grid.gdshader" id="4_hfqw6"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="5_uoejw"]
[ext_resource type="Texture2D" uid="uid://bs16qw34pxxr4" path="res://assets/icons/FixtureGroup.svg" id="6_n4jju"]
[ext_resource type="Script" uid="uid://xt6kc4c6oyap" path="res://core/components/FixtureGroup.gd" id="7_uktvc"]
[ext_resource type="Texture2D" uid="uid://bt7w4l5chxmnr" path="res://assets/icons/ZoomIn.svg" id="8_7f0w5"]
[ext_resource type="Texture2D" uid="uid://ce4pstyb2a81e" path="res://assets/icons/ZoomAll.svg" id="9_fhyt7"]
[ext_resource type="Texture2D" uid="uid://cyu6w28aucjer" path="res://assets/icons/ZoomOut.svg" id="10_0y48c"]
[ext_resource type="Texture2D" uid="uid://c6x6e8xi6lupf" path="res://assets/icons/Checked.svg" id="11_qywxx"]
[ext_resource type="Texture2D" uid="uid://c35w1rgvcgdt0" path="res://assets/icons/Dice.svg" id="12_ym8mk"]
[ext_resource type="Texture2D" uid="uid://dp8vkenjk120x" path="res://assets/icons/GridOff.svg" id="13_2j73k"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="14_kpcuh"]
[ext_resource type="Texture2D" uid="uid://b45woehlhukgj" path="res://assets/icons/Download.svg" id="15_gpywp"]
[ext_resource type="Texture2D" uid="uid://f8q8t2pxjmkl" path="res://assets/icons/remove_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" id="16_5f2hc"]
[ext_resource type="Texture2D" uid="uid://be3tq05v1ne7n" path="res://assets/icons/Horizontal_distribute.svg" id="17_v186y"]
[ext_resource type="Texture2D" uid="uid://bn4jkekidjyne" path="res://assets/icons/Vertical_distribute.svg" id="18_7l1cq"]
[ext_resource type="Texture2D" uid="uid://vm1u4mv102e3" path="res://assets/icons/Dot_Grid.svg" id="19_exsht"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxspt"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.10748, 0.10748, 0.10748, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10tdw"]
shader = ExtResource("4_hfqw6")
shader_parameter/size = Vector2(3840, 2160)
shader_parameter/line_width = 0.084
shader_parameter/offset = Vector2(0, 0)
shader_parameter/grid_size = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7r8u"]
bg_color = Color(0, 0.513726, 1, 0.364706)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 3
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkwr7"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UIVirtualFixtures" type="Control" node_paths=PackedStringArray("dummy_scroll", "real_scroll", "fixture_container", "remove_fixture_button", "horizontal_align_button", "vertical_align_button", "grid_align_button", "component_button", "edit_controls", "edit_mode_nodes", "menu_bar")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wppqu")
script = ExtResource("2_rd2ea")
dummy_scroll = NodePath("DummyScroll")
real_scroll = NodePath("Table/RealScroll")
fixture_container = NodePath("Table/RealScroll/ScrollSize/FixtureContainer")
remove_fixture_button = NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/RemoveFixtures")
horizontal_align_button = NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/HorizontalAlign")
vertical_align_button = NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/VerticalAlign")
grid_align_button = NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/GridAlign")
component_button = NodePath("TitleBar/HBoxContainer/ComponentButton")
edit_controls = NodePath("TitleBar/HBoxContainer/EditControls")
edit_mode_nodes = [NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls"), NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer"), NodePath("TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls")]
menu_bar = NodePath("TitleBar")

[node name="Table" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qxspt")

[node name="RealScroll" type="ScrollContainer" parent="Table"]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ScrollSize" type="Control" parent="Table/RealScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2

[node name="FixtureContainer" type="Control" parent="Table/RealScroll/ScrollSize" node_paths=PackedStringArray("_virtual_fixtures_root")]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_4kdmq")
_virtual_fixtures_root = NodePath("../../../..")

[node name="Grid" type="ColorRect" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
visible = false
material = SubResource("ShaderMaterial_10tdw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.0728426, 0.0728427, 0.0728425, 1)

[node name="SelectBox" type="PanelContainer" parent="Table/RealScroll/ScrollSize/FixtureContainer"]
visible = false
layout_mode = 0
offset_right = 267.0
offset_bottom = 257.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a7r8u")

[node name="TitleBar" parent="." instance=ExtResource("5_uoejw")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="ComponentButton" parent="TitleBar/HBoxContainer" index="0"]
text = "FixtureGroup"
icon = ExtResource("6_n4jju")
class_filter = ExtResource("7_uktvc")
enable_resolve_mode = true
enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer" index="0"]
layout_mode = 2

[node name="Zoom Controls" type="PanelContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls"]
layout_mode = 2

[node name="ZoomIn" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom In"
icon = ExtResource("8_7f0w5")

[node name="ZoomAll" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Center Zoom"
icon = ExtResource("9_fhyt7")

[node name="ZoomOut" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom Out"
icon = ExtResource("10_0y48c")

[node name="Select Controls" type="PanelContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Select Controls"]
layout_mode = 2

[node name="SelectAll" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Select Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("11_qywxx")

[node name="DeSelectRandom" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Select Controls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_ym8mk")

[node name="GridControls" type="PanelContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls"]
layout_mode = 2

[node name="ShowGrid" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Grid"
toggle_mode = true
icon = ExtResource("13_2j73k")

[node name="GridSize" type="SpinBox" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Snapping Distance"
value = 20.0

[node name="PanelContainer" type="PanelContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="AddFixtures" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add Fixtures"
icon = ExtResource("14_kpcuh")

[node name="Import" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Import Selected Fixtures"
disabled = true
icon = ExtResource("15_gpywp")

[node name="RemoveFixtures" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Remove Selected Fixtures"
disabled = true
icon = ExtResource("16_5f2hc")

[node name="AlignControls" type="PanelContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls"]
layout_mode = 2

[node name="HorizontalAlign" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Horizontal Align Selection"
disabled = true
icon = ExtResource("17_v186y")

[node name="VerticalAlign" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Vertical Align Selection"
disabled = true
icon = ExtResource("18_7l1cq")

[node name="GridAlign" type="Button" parent="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer"]
layout_mode = 2
tooltip_text = "Grid Align Selection"
disabled = true
icon = ExtResource("19_exsht")

[node name="EditControls" parent="TitleBar/HBoxContainer" index="2"]
show_edit = true

[node name="DummyScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 80.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollSize" type="Control" parent="DummyScroll"]
custom_minimum_size = Vector2(3840, 2160)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="GridAlignSize" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 69.0
offset_right = 104.0
offset_bottom = 118.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkwr7")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="GridAlignSize"]
layout_mode = 2

[node name="Label3" type="Label" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
text = "Grid Width:"

[node name="GridWidth" type="SpinBox" parent="GridAlignSize/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 9.22337e+18
value = 1.0
update_on_text_changed = true

[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="." method="_on_fixture_container_gui_input"]
[connection signal="gui_input" from="Table/RealScroll/ScrollSize/FixtureContainer" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_gui_input"]
[connection signal="object_selected" from="TitleBar/HBoxContainer/ComponentButton" to="Table/RealScroll/ScrollSize/FixtureContainer" method="set_fixture_group"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls/HBoxContainer/ZoomIn" to="." method="_zoom_in"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Zoom Controls/HBoxContainer/ZoomOut" to="." method="_zoom_out"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Select Controls/HBoxContainer/SelectAll" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_select_all_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/Select Controls/HBoxContainer/DeSelectRandom" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_de_select_random_pressed"]
[connection signal="toggled" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls/HBoxContainer/ShowGrid" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_show_grid_toggled"]
[connection signal="value_changed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/GridControls/HBoxContainer/GridSize" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_size_value_changed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/AddFixtures" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_add_fixtures_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/Import" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_import_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/PanelContainer/HBoxContainer/RemoveFixtures" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_remove_fixtures_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/HorizontalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_horizontal_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/VerticalAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_vertical_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="." method="_on_grid_align_pressed"]
[connection signal="pressed" from="TitleBar/HBoxContainer/ScrollContainer/HBoxContainer/AlignControls/HBoxContainer/GridAlign" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_align_pressed"]
[connection signal="value_changed" from="GridAlignSize/VBoxContainer/GridWidth" to="Table/RealScroll/ScrollSize/FixtureContainer" method="_on_grid_width_value_changed"]

[editable path="TitleBar"]
